Bug 1225255 - Encode URL query string segments to bytes with HTML numeric character references for unmappable characters. r=valentin

MozReview-Commit-ID: HDJxSSZZYlw